fixed my plate section and worked on spacing. Home page complete for now

--- a/less/about-page.less
+++ b/less/about-page.less
@@ -20,7 +20,7 @@
     //margin-left: 25%;
     display: flex;
     flex-wrap: wrap;
-    
+    background-color: rgba(255, 0, 0, 0.4);
   
   .people{
     margin-top: 1%;
